If applied these commits will add style elements to the index, about and linkup page

--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,16 @@ Primary Color (Gray): #F5F3F3;
 Secondary Color (Pale Blue): #7A4AED; Dark Blue 31117F
 
 */
+* {
+  box-sizing: border-box;
+}
 body{
   background-color: #ffffff;
   font-family: 'Oswald', sans-serif;
   font-size: 16px; /* Sets the font size to 16px */
   font-weight: 300; /* Sets the font weight to 300 */
   line-height: 1.6; /* Sets the line-height to 1.6 * the font-size */
-  color: #4a4a4a;
+  color: #000000;
 }
 img {
   width: 100%;
@@ -47,4 +50,51 @@ a:focus {
   color: #ff7f50;
   text-transform: uppercase;
   border: 2px solid #ff7f50;
+}
+/* Layout Styling*/
+.container {
+  padding: 0 15px;
+}
+.row {
+  margin: 25px 0; /* 25px top and bottom, 0 left and right */
+}
+#work .row { padding-bottom: 25px; border-bottom: 1px solid #4a4a4a; }
+#hero h1 {
+  text-align: center; /* Centers text */
+}
+.logo {
+  max-width: 250px;
+}
+header {
+  background-color: #ffe4c4;
+  text-align: center;
+  padding: 10px 0;
+  box-shadow: 0px 10px 5px 0px rgba(50, 50, 50, 0.75);
+  position: relative
+}
+nav > ul {
+  list-style-type: none;
+  padding: 0;
+}
+nav > ul > li {
+  display: inline-block;
+  width 100%
+}
+nav > ul > li > a {
+  padding: 0 15px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #4a4a4a;
+}
+nav > ul > li > a{
+  visted
+}
+#hero {
+  background-color: #ffe4c4;
+}
+#hero {
+  background-color: #ffe4c4;
+  padding: 20px 0;
+  display: inline-block;
+  width: 100%;
 }
