--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ img {
   width: 100%;
 }
 a {
-  color: #7A4AED;
+  color: #3940FF;
   text-decoration: none; /* No underlining */
 }
 a:hover {
@@ -28,18 +28,18 @@ a:hover {
 }
 a:hover,
 a:focus {
-  color: #F58209;
+  color: #000356;
   text-decoration: underline;
 }
 .button {
   display: inline-block;
-  background-color: #ff7f50;
-  color: white;
+  background-color: #4A4848;
+  color: #000000;
   font-weight: 400;
   text-decoration: none;
   padding: 10px;
   border-radius: 3px;
-  border-bottom: 2px solid #994c30;
+  border-bottom: 2px solid #4A4848;
   transition-duration: 0.2s;
   transition-property: opacity;
 }
@@ -57,6 +57,9 @@ a:focus {
 /* Layout Styling*/
 .container {
   padding: 0 15px;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .row {
   margin: 25px 0; /* 25px top and bottom, 0 left and right */
@@ -105,6 +108,20 @@ nav > ul > li > a {
   display: inline-block;
   width: 100%;
 }
+
+}
+#hero span {
+  display: block;
+}
+
+[class*="col-"] {
+  float: left;
+  padding: 10px
+}
+.centerMe{
+  text-align: center;
+}
+
 /* Media Queries */
 /* ==============================
 Medium devices (640px and larger)
@@ -120,27 +137,56 @@ Medium devices (640px and larger)
     float: right;
     margin-top: 4px;
   }
+  /*medium col*/
+  .col-md-6 {
+    width: 50%;
+  }
+  .col-md-12 {
+    width: 100%;
+  }
+.berlin-illustration{
+  width: 100%;
+max-width: 100%;
+height: auto;
 }
-#hero span {
-  display: block;
+@keyframes color-change {
+  from {fill: #edc655;}
+  to {fill: #f76414;}
 }
-.col-md-6 {
-  width: 50%;
+.sun{
+  animation-duration: 4s;
+  animation-name: color-change;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
 }
-[class*="col-"] {
-  float: left;
-  padding: 10px
+@keyframes cloud-move {
+  from {transform: translate(0,50px);}
+  to {transform: translate(200px,50px);}
 }
+.cloud-front {
+  animation: 30s cloud-move infinite alternate linear;
+}
+@keyframes cloud-move-reverse {
+  from {transform: translate(446px,48px);}
+  to {transform: translate(100px, 48px);}
+}
+.cloud-back {
+  animation: 34s cloud-move-reverse infinite alternate linear;
+}
+
   /* ==============================
 Large devices (1024px or larger)
 ================================= */
 @media only screen and (min-width: 1440px) {
+  .col-lg-5{
+    width: 40%;
+  }
+    .col-lg-7{
+      width: 60%
+    }
 }
-.container {
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-}
+
 
 /* ==============================
 X-large devices (1440px or larger)
