If applied these commits will change font and add a JS file

--- a/css/style.css
+++ b/css/style.css
@@ -28,17 +28,17 @@ a:hover {
 }
 a:hover,
 a:focus {
-  color: #000356;
+  color: #371FAB;
   text-decoration: underline;
 }
 .button {
   display: inline-block;
-  background-color: #4A4848;
-  color: #000000;
+  background-color: #2F3136;
+  color: #FFFFFF;
   font-weight: 400;
   text-decoration: none;
   padding: 10px;
-  border-radius: 3px;
+  border-radius: 1.5px;
   border-bottom: 2px solid #4A4848;
   transition-duration: 0.2s;
   transition-property: opacity;
@@ -48,12 +48,17 @@ a:focus {
   text-decoration: none;
 }
 .buttoncontact{
-  background-color: #ff7f50;
+  background-color: #6C6C6C;
   color: #ffffff;
   text-transform: uppercase;
-  border: 2px solid #ff7f50;
+  border: 2px solid #6C6C6C;
   padding: 10px
 }
+.buttoncontact:hover
+.buttoncontact:focus{
+  color: #000000
+}
+
 /* Layout Styling*/
 .container {
   padding: 0 15px;
@@ -77,7 +82,7 @@ a:focus {
   max-width: 100px;
 }
 header {
-  background-color: #ffe4c4;
+  background-color: #ffffff;
   text-align: center;
   padding: 10px 0;
   box-shadow: 0px 10px 5px 0px rgba(50, 50, 50, 0.75);
@@ -97,13 +102,10 @@ nav > ul > li > a {
   color: #4a4a4a;
 }
   a:visited{
-  color:#31117F
+  color:#440678
 }
 #hero {
-  background-color: #ffe4c4;
-}
-#hero {
-  background-color: #ffe4c4;
+  background-color: #ffffff;
   padding: 20px 0;
   display: inline-block;
   width: 100%;
