If applied these commits will correct any final issues

--- a/css/style.css
+++ b/css/style.css
@@ -19,29 +19,31 @@ img {
 	width: 100%;
 }
 a {
-	color: #ffffff;
-	text-decoration: none; /* No underlining */
+  background: none
+
+	;text-decoration: none; /* No underlining */
 }
 
 .button {
 	display: inline-block;
-	background-color: #221f1f;
+	background-color: #efefef;
 	color: white;
 	font-weight: 500;
 	text-decoration: none;
 	padding: 10px;
 	border-radius: 1.5px;
-	border-bottom: 2px solid #221f1f;
-	transition-duration: 0.2s;
+	border-bottom: 2px
+	;transition-duration: 0.2s;
 	transition-property: opacity;
+  border: 2px solid  #000000
 }
 .button:hover {
 	opacity: 0.8; /* Reduces the opacity of the button to 80% */
 	text-decoration: none;
-	color: white;
+	color: black;
 }
 .buttoncontact {
-	background-color: #000328;
+	background-color: #efefef;
 	color: white;
 	text-transform: uppercase;
 	border: 2px solid #221f1f;
@@ -205,48 +207,6 @@ Medium devices (640px and larger)
 	}
 }
 
-.berlin-illustration {
-	width: 100%;
-	max-width: 100%;
-	height: auto;
-}
-@keyframes color-change {
-	from {
-		fill: #edc655;
-	}
-	to {
-		fill: #f76414;
-	}
-}
-.sun {
-	animation-duration: 4s;
-	animation-name: color-change;
-	animation-iteration-count: infinite;
-	animation-direction: alternate;
-	animation-timing-function: linear;
-}
-@keyframes cloud-move {
-	from {
-		transform: translate(0, 50px);
-	}
-	to {
-		transform: translate(200px, 50px);
-	}
-}
-.cloud-front {
-	animation: 30s cloud-move infinite alternate linear;
-}
-@keyframes cloud-move-reverse {
-	from {
-		transform: translate(446px, 48px);
-	}
-	to {
-		transform: translate(100px, 48px);
-	}
-}
-.cloud-back {
-	animation: 34s cloud-move-reverse infinite alternate linear;
-}
 
 /* ==============================
 Large devices (1024px or larger)
