--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ a {
 .button {
 	display: inline-block;
 	background-color: #efefef;
-	color: white;
+	color: black;
 	font-weight: 500;
 	text-decoration: none;
 	padding: 10px;
@@ -40,7 +40,7 @@ a {
 .button:hover {
 	opacity: 0.8; /* Reduces the opacity of the button to 80% */
 	text-decoration: none;
-	color: black;
+	color: orange;
 }
 .buttoncontact {
 	background-color: #efefef;
